@@ -1586,6 +1586,9 @@ SMILEY_SMILEQ           ICON                    "res\\Smiley_smileq.ico"
 SMILEY_LOOKSIDE         ICON                    "res\\Smiley_lookside.ico"
 BROWSEFOLDERSMALL       ICON                    "res\\Browse8.ico"
 BADGUY                  ICON                    "res\\Badguy.ico"
+BADGUYRED               ICON                    "res\\BadguyRed.ico"
+BADGUYBLUE              ICON                    "res\\BadguyBlue.ico"
+BADGUYGREEN             ICON                    "res\\BadguyGreen.ico"
 DISSIMILAR_NAME         ICON                    "res\\FDC.ico"
 SEARCH_MULTI            ICON                    "res\\Search_Multi.ico"
 SEARCH_EN               ICON                    "res\\Search_En.ico"
