@@ -226,3 +226,9 @@ XXXXYYZZ:
 + automatic priorities are more flexible now and also set VERYLOW and VERYHIGH states [WiZaRd]
 + added extendedXS support - original by David Xanatos [WiZaRd]
 + added basic IPv6 support - original by David Xanatos [WiZaRd]
++ added "About kMule" page to options with information and donation possibility [WiZaRd]
++ added additional CA icons, depending on the CA status/score [WiZaRd]
+ * red skull: very bad
+ * black skull: bad
+ * blue skull: nice score (>1.0 - 2.0)
+ * green skull: good score (> 2.0)
